[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://sprites/jugador/Enemy/muerto.png" type="Texture" id=2]
[ext_resource path="res://sprites/jugador/Enemy/vivo.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 17.1493 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "muerto",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "vivo",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 33.1992, 19.3499 )

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2.05609, 1.57766 )
frames = SubResource( 2 )
animation = "vivo"

[node name="EnemyArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyArea2D"]
shape = SubResource( 3 )

[node name="RayCast2DLeft" type="RayCast2D" parent="."]
position = Vector2( -32, 0 )
enabled = true

[node name="RayCast2DRight" type="RayCast2D" parent="."]
position = Vector2( 32, 0 )
enabled = true
[connection signal="body_entered" from="EnemyArea2D" to="." method="_on_EnemyArea2D_body_entered"]
